# serializer version: 1
# name: test_relist_jobs[preparing-False]
  list([
  ])
# ---
# name: test_relist_jobs[waiting-False]
  list([
  ])
# ---
# name: test_relist_jobs[waiting-True]
  list([
    tuple(
      'jobs_pathoscope_bowtie',
      'fb085f7f',
    ),
  ])
# ---
